--- a/about_me.html
+++ b/about_me.html
@@ -11,6 +11,8 @@
     </style>
 </head>
 <body>
+    <script src="base.js"></script>
+
    <div class="navi">
     <ul>
         <li><a href="index.html">主页</a></li>
@@ -35,7 +37,7 @@
             </div>
         </div>
         <div class="mainbar">
-
+            教育经历，曾获奖项，爱好，联系我
         </div>
    </div>
 </body>
