--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="description" content="主页">
     <title>lzy's blog</title>
     <link rel="stylesheet" href="base.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" id="favicon" href="img/favicon.svg" type="image/x-icon">
     <style>
-        
     </style>
 </head>
 <body>
+   <script src="base.js"></script>
    <div class="navi">
     <ul>
         <li><a href="index.html" style="color:blue">主页</a></li>
@@ -39,5 +39,6 @@
 
         </div>
    </div>
+
 </body>
 </html>
