--- a/recommend.html
+++ b/recommend.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <script src="base.js"></script>
    <div class="navi">
     <ul>
         <li><a href="index.html" >主页</a></li>
