--- a/dt.html
+++ b/dt.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="description" content="主页">
     <title>lzy's blog</title>
-    <link rel="stylesheet" href="base.css">
-    <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="shortcut icon" id="favicon" href="img/favicon.svg" type="image/x-icon">
     <style>
         .newdt{
             margin-top:20px;
             margin-left:15px;
             display:flex;
             background-color: rgba(9, 132, 217,0.5);
-            width:50px;
+            width:40px;
             height:200px;
             transition:width 2s,border-radius 2s;
         }
@@ -50,7 +51,7 @@
     </style>
 </head>
 <body>
-    <script src="base.js"></script>
+    
 
    <div class="navi">
     <ul>
@@ -66,12 +67,22 @@
    <div class="bod">
         <div class="sidebar">
             <a href="https://github.com/shaochang123"><img src="img/headpor.jpg"></a>
-            <div style="margin-top:40px;background-color:rgb(247,247,247);display:flex;justify-content: space-between;">
+            <div style="margin-top:40px;background-color:rgb(247,247,247);display:flex;justify-content: space-between;width:320px">
                 <div style="background-color:skyblue;width: 10px;">
                     
                 </div>
                 <div style="font-size:30px;background-color: rgb(247,247,247);">
                     公告
+                </div>
+            </div>
+            <div class="scene">
+                <div class="cube">
+                    <div class="cube-face front" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
+                    <div class="cube-face back" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
+                    <div class="cube-face left" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
+                    <div class="cube-face right" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
+                    <div class="cube-face top" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
+                    <div class="cube-face bottom" style="background-image: url('img/welbk.jpg');background-size: 100% 100%;"></div>
                 </div>
             </div>
         </div>
@@ -88,6 +99,10 @@
             </div>
         </div>
    </div>
-   
+   <footer>
+    <p id="totalVisits">总访问量：0</p>
+    <p id="currentVisitors">当前在线人数：0</p>
+   </footer>
+   <script src="js/base.js"></script>
 </body>
 </html>
